general updating work

--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "34656a15",
    "metadata": {
     "slideshow": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f9c01980",
    "metadata": {
     "slideshow": {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c0fadb6a",
    "metadata": {
     "slideshow": {
@@ -198,7 +198,7 @@
       "fruit 0 is kiwi\n",
       "fruit 1 is banana\n",
       "fruit 2 is apple\n",
-      "fruit 3 is orange\n"
+      "fruit 3 is pear\n"
      ]
     }
    ],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "b2306a5f",
    "metadata": {
     "slideshow": {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "1df272eb",
    "metadata": {
     "slideshow": {
@@ -325,7 +325,7 @@
      "text": [
       "kiwi\n",
       "apple\n",
-      "orange\n"
+      "pear\n"
      ]
     }
    ],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b78bcc51",
    "metadata": {
     "slideshow": {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "02639ff0",
    "metadata": {
     "slideshow": {
@@ -438,32 +438,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4906364e",
+   "cell_type": "markdown",
+   "id": "a2944428",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please give your name:  .\n",
-      "please give your name: hh\n",
-      "please give your name: henk\n",
-      "Welcome, henk\n"
-     ]
-    }
-   ],
    "source": [
+    "```python\n",
     "name = \"\"\n",
     "while len(name.strip()) < 3:\n",
     "    name = input(\"please give your name: \")\n",
     "\n",
-    "print(f'Welcome, {name}')"
+    "print(f'Welcome, {name}')\n",
+    "```"
    ]
   },
   {
@@ -495,22 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a569d540",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You can take driving lessons\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 17\n",
     "if age >= 17:\n",
@@ -535,23 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ca86b65c",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You can take driving lessons\n",
-      "You may not drive a car alone yet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 17\n",
     "if age >= 17:\n",
@@ -611,22 +583,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "09530590",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kiwi only when juicy and sweet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def demo_old_switch(fruit):\n",
     "    # method-local defined functions\n",
