--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "32c42ade",
    "metadata": {
     "slideshow": {
@@ -1160,17 +1160,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/michielnoback/git_projects/python_intro\n",
-      "/Users/michielnoback/Desktop\n"
+      "/Users/michielnoback/git_projects/python_intro\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['sets.png', 'eBooks']"
+       "['13_next_steps.ipynb', '07_comprehensions.ipynb']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,9 +1177,6 @@
    "source": [
     "import os\n",
     "print(os.getcwd())                          #working dir - defaults to where the script lives\n",
-    "#os.chdir(\"~/Desktop\")                      #relative paths from user home don't work\n",
-    "os.chdir(os.path.expanduser(\"~/Desktop\"))   #this workaround needed, or an absolute path\n",
-    "print(os.getcwd())\n",
     "os.listdir()[:2]        # list contents (only first two items)"
    ]
   },
@@ -1195,6 +1191,7 @@
    "source": [
     "Other `os` functions that are often used:\n",
     "\n",
+    "- **`os.chdir()`**: change the current working directory\n",
     "- **`os.mkdir(path[, mode])`**: Create a directory named path (with unix mode). You can also create temporary directories; see tempfile module\n",
     "- **`os.remove(path)`**: Remove (delete) the file path. If path is a directory, an OSError is raised; see rmdir() below to remove a directory.\n",
     "- **`os.rename(src,dst)`**: Rename the file or directory src to dst\n",
@@ -1333,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "fb541ed1",
    "metadata": {
     "slideshow": {
@@ -1358,10 +1355,10 @@
    ],
    "source": [
     "import csv\n",
-    "\n",
-    "csv_reader = csv.reader(open('data/exp_data.csv')) # parameter delimiter defaults to ','\n",
-    "for row in csv_reader:\n",
-    "    print(row)"
+    "with open('data/exp_data.csv') as csv_file:\n",
+    "    csv_reader = csv.reader(csv_file, delimiter=',')\n",
+    "    for row in csv_reader:\n",
+    "        print(row)"
    ]
   },
   {
@@ -1378,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "207c63af",
    "metadata": {
     "slideshow": {
@@ -1401,9 +1398,10 @@
     }
    ],
    "source": [
-    "csv_dict_reader = csv.DictReader(open('data/exp_data.csv'))\n",
-    "for row in csv_dict_reader:\n",
-    "    print(row)\n"
+    "with open('data/exp_data.csv') as csv_file:\n",
+    "    csv_reader = csv.DictReader(csv_file, delimiter=',')\n",
+    "    for row in csv_reader:\n",
+    "        print(row)"
    ]
   },
   {
@@ -1601,9 +1599,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "education",
    "language": "python",
-   "name": "python3"
+   "name": "education"
   },
   "language_info": {
    "codemirror_mode": {
