--- a/10_oo_programming.ipynb
+++ b/10_oo_programming.ipynb
@@ -321,6 +321,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2cf297b1",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Some Object-Oriented principles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b47d0f72",
    "metadata": {
     "slideshow": {
@@ -346,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a0425807",
    "metadata": {
     "slideshow": {
@@ -368,7 +380,7 @@
     "        print('quack quack')\n",
     "        \n",
     "eider = Duck()\n",
-    "eider.swim()"
+    "eider.quack()"
    ]
   },
   {
@@ -385,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e7e30da9",
    "metadata": {
     "slideshow": {
@@ -411,7 +423,8 @@
     "        \n",
     "\n",
     "ruddy_duck = Duck(\"Ruddy Duck\")\n",
-    "ruddy_duck.swim()"
+    "\n",
+    "ruddy_duck.quack()"
    ]
   },
   {
