--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -4,21 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
-    "\n",
-    "## Introduction \n",
-    "These exercises are meant for you to practice your skills. The sections are numbered according to the chapter numbering so you know where to look for the exercises belonging to a particular chapter.  \n",
-    "\n",
-    "You can deal with the exercises in several ways. The most convenient is to clone or download this notebook by clicking on the download icon at the top of this page, and work on the notebook on your own machine. You can also clone or download the entire repository by clicking on the github icon (the little cat). The exercises notebook is in the `_sources` folder. That has the advantage that all data files are included (the `data` folder).  \n",
-    "\n",
-    "Hints and/or solutions are often included; they can be displayed where it says <span style = \"color:OrangeRed;cursor:pointer;\">\"&#10149; Click to see the solution\"</span> or <span style = \"color:OrangeRed;cursor:pointer;\">\"&#10149; Give me a hint\"</span>. Unfortunately, rendering of these hints is not flawless: they only get displayed correctly in a hosted notebook environment (not in a static viewer such as nbviewer or github).  \n",
-    "Give it a try:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<details>\n",
     "<summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Click to see solution!</summary>\n",
     "\n",
@@ -2065,6 +2050,18 @@
     "```\n",
     "\n",
     "Think before you start! What would be the most efficient \"algorithm\" to find the number?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anagram maker (&#10034; to &#10034;&#10034;)\n",
+    "\n",
+    "An anagram is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once. For example, the word _anagram_ itself can be rearranged into _nag a ram_. (source: Wikipedia)\n",
+    "\n",
+    "You should ask your user for a word (or word combination or phrase) and also (optionally) how many separate words the anagram may or must comprise.\n",
+    "Next, present a list of anagrams. Preferable, these anagrams should be pronouncable by intelligently placing vowels and consonants."
    ]
   },
   {
