--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -376,8 +376,17 @@
    "source": [
     "The `step` is 1 by default and it is not mandatory, and if `start` or `stop` is omitted this means \"from the beginning (0)\" or \"to the end\".  \n",
     "Note that `stop` is NOT inclusive!  \n",
+    "Below the different concepts of slicing are demonstrated.\n",
+    "\n",
+    "![indexing_examples.png](pics/indexing_examples.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If you try to access an element (character) that does not exist you will get an `IndexError`.    \n",
-    "Here are some examples using strings. They work the same in lists and tuples as you will discover."
+    "Here are some code examples using strings. They work the same in lists and tuples as you will discover."
    ]
   },
   {
@@ -862,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -942,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1126,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1162,7 +1171,7 @@
     "print(zoo['rhino'])\n",
     "\n",
     "#print(zoo['giraffe'])     # gives a KeyError\n",
-    "print(zoo.get('giraffe'))  # returns None\n"
+    "print(zoo.get('giraffe'))  # returns None \n"
    ]
   },
   {
@@ -1361,9 +1370,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "education",
    "language": "python",
-   "name": "python3"
+   "name": "education"
   },
   "language_info": {
    "codemirror_mode": {
