fix lost header exercises

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -370,14 +370,23 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
     "The `step` is 1 by default and it is not mandatory, and if `start` or `stop` is omitted this means \"from the beginning (0)\" or \"to the end\".  \n",
     "Note that `stop` is NOT inclusive!  \n",
-    "Below the different concepts of slicing are demonstrated.\n",
-    "\n",
+    "Below the different concepts of slicing are demonstrated.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "![indexing_examples.png](pics/indexing_examples.png)"
    ]
   },
@@ -1368,7 +1377,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Diavoorstelling",
   "kernelspec": {
    "display_name": "education",
    "language": "python",
