--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -8,9 +8,10 @@
     }
    },
    "source": [
-    "# It's all about data\n",
-    "Without data there is not much computing to be done. All programs take data as input and most of them also generate data as output.  \n",
-    "Input can come from a variety of sources: from file, a database, keyboard, a GUI, web socket and output can go to different destinations as well."
+    "# Programming is: operations on data\n",
+    "Without data there is not much computing to be done. All programs take data as input and most of them also generate data as output. In between, the data is processed, transformed and summarized.  \n",
+    "Input can come from a variety of sources: from file, a database, keyboard, a GUI, web socket and output can go to different destinations as well.  \n",
+    "This chapter deals with both the operators that work on data and the different basic data types Python knows about."
    ]
   },
   {
@@ -24,8 +25,7 @@
     "There are only a few basic types of data: text and numbers (and booleans). \n",
     "However, data can be aggregated into more complex structures such as collections and objects.\n",
     "\n",
-    "In this chapter we'll explore the different core data types of Python, both **scalar** and **collection**.  \n",
-    " "
+    "In this chapter we'll explore the different core data types of Python, both **scalar** and **collection**. But first the operators are covered.  "
    ]
   },
   {
@@ -36,7 +36,470 @@
     }
    },
    "source": [
-    "## Scalar types"
+    "## Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Operators come in several flavors. Their purpose is either arithmetic, assignment or comparative. Most operators are binary: they have a left and a right operand on which they operate to produce a result: `left_operand OPERATOR right_operand`. Below, the left operand will be designated L and the right one R."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Arithmetic\n",
+    "\n",
+    "They all form expressions in this form: `L OPERAND R`.\n",
+    "\n",
+    "- `+` to add R to L\n",
+    "- `-` to subtract R from L\n",
+    "- `*` to multiply R and L\n",
+    "- `/` to divide L by R\n",
+    "- `**` to get L to the power R\n",
+    "- `//` to floor divide L by R: any decimal part will be chopped off\n",
+    "- `%` to get the remainder: what is left after R has been subtracted a maximum number of times from L\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Here are some examples for the last three."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 to the power 3:    64\n",
+      "4 to the power 0.5:  2.0\n",
+      "\n",
+      "Floor divide 7 by 3: 2\n",
+      "Floor divide 8 by 3: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'4 to the power 3:    {4**3}')\n",
+    "print(f'4 to the power 0.5:  {4**0.5}')\n",
+    "print('')\n",
+    "print(f'Floor divide 7 by 3: {7 // 3}')\n",
+    "print(f'Floor divide 8 by 3: {8 // 3}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remainder of 7 divided by 3: 1\n",
+      "Remainder of 8 divided by 3: 2\n",
+      "Remainder of 9 divided by 3: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Remainder of 7 divided by 3: {7 % 3}')\n",
+    "print(f'Remainder of 8 divided by 3: {8 % 3}')\n",
+    "print(f'Remainder of 9 divided by 3: {9 % 3}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Assignment\n",
+    "Assignment also have this form: `L OPERAND R`. In all cases, L, which must be a variable name, gets assigned a value from what is on the Right/ Besides the regular `=` assignment there are some handy shortcut operators:\n",
+    "\n",
+    "- `=` L gets the value of R\n",
+    "- `+=` L gets the value of itself plus R (only numeric!)\n",
+    "- `-=` L gets the value of itself minus R (only numeric!)\n",
+    "- `*=` L gets the value of itself times R (only numeric!)\n",
+    "\n",
+    "There is one for every arithmetic operator, but these don't do well for code readability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=20 and y=20\n",
+      "q=40 and t=40\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20      # a literal\n",
+    "y = x       # another variable\n",
+    "q = t = 40  # multiple assignment\n",
+    "print(f'x={x} and y={y}')\n",
+    "print(f'q={q} and t={t}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 30\n",
+      "y = 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "x += 10    # same as x = x + 10\n",
+    "print(f'x = {x}')\n",
+    "\n",
+    "y = 20\n",
+    "y *= 5     # same as y = y * 5\n",
+    "print(f'y = {y}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Comparisons\n",
+    "\n",
+    "All comparison operators produce **_boolean_** values. They have this form: `L OPERAND R`.\n",
+    "\n",
+    "- `==` True if R equals L\n",
+    "- `!=` True if R does not equal L\n",
+    "- `>`  True if L is greater than R\n",
+    "- `>=` True if L is greater than or equal to R\n",
+    "- `<`  True if L is smaller than R\n",
+    "- `<=` True if L is smaller than  or equal to R\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x == y: False\n",
+      "x < y:  True\n",
+      "x >= y: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 4\n",
+    "y = 7\n",
+    "print(f'x == y: {x == y}')\n",
+    "print(f'x < y:  {x < y}')\n",
+    "print(f'x >= y: {x >= y}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Logical operators\n",
+    "\n",
+    "The final three are used to combine the comparison operators int more complex expressions, or to negate the result of a comparison. Again they have this form: `L OPERAND R`, except for the only _**unary**_ operator in the field: `not`, which is used as `not <boolean>`. \n",
+    "\n",
+    "- `and` yields True only if both L and R are True \n",
+    "- `or` yields True if either L or R is True\n",
+    "- `not` negates the subsequent boolean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b: False\n",
+      "a or b:  True\n",
+      "not a:   False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "b = False\n",
+    "print(f'a and b: {a and b}')\n",
+    "print(f'a or b:  {a or b}')\n",
+    "print(f'not a:   {not a}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Finally, the are some more keywords the also produce boolean values. They check for identity (a special case of equality) and membership.  \n",
+    "\n",
+    "This is the identity check:  \n",
+    "\n",
+    "- `is` yields True only if both L and R are the _same_ object.\n",
+    "\n",
+    "Note that strings and low numbers are cached, so they sometimes give unexpected behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 20\n",
+    "y = 20\n",
+    "print(x is y)\n",
+    "\n",
+    "x = 20_000\n",
+    "y = 20_000\n",
+    "print(x is y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The keyword `in` checks for membership. The right part of the expression needs to be a collection or iterable (see below):  \n",
+    "\n",
+    "- `in` yields True if L is a member of R."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = 'Roses are red'\n",
+    "s2 = 'red'\n",
+    "\n",
+    "print(s2 in s1)\n",
+    "print(s2 not in s1)\n",
+    "print(s1 in s2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Precedence\n",
+    "\n",
+    "Consider this calculation:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 + 3 * 2 - 10 / 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The outcome is 8 because some operators get their turn before others. If their were all simply evaluated left to right, the outcome would have been 0.8. The reason for the result being 8 is **_operator precedence_**: the fact that some operators are evaluated before others.  \n",
+    "The table below gives the precedence for the most used operators in Python (I omitted bitwise):  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "| Operators | Meaning |\n",
+    "|-----------|--------------|\n",
+    "| `()` | Parentheses |\n",
+    "| `**` | Exponent |\n",
+    "| `*`, `/`, `//`, `%` | Multiplication, Division, Floor division, Modulus |\n",
+    "| `+`, `-` | Addition, Subtraction |\n",
+    "| `==`, `!=`, `>`, `>=`, `<`, `<=`, `is`, `is not`, `in`, `not in` | Comparisons, Identity, Membership operators |\n",
+    "| `not` | Logical NOT |\n",
+    "| `and` | Logical AND |\n",
+    "| `or` | Logical OR |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "So to get back to the example, you can always force evaluation using perentheses (note one of these pairs is superfluous):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((4 + 3) * 2) - 10) / 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Data: Base types"
    ]
   },
   {
@@ -302,7 +765,7 @@
     }
    },
    "source": [
-    "## Collection types"
+    "## Data: Collections"
    ]
   },
   {
