added dict theory

--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -1588,7 +1588,7 @@
     "fruit_supply = {'apple': 5, 'pear': 2, 'orange': 4}\n",
     "```\n",
     "\n",
-    "This says \"for key apple the corresponding value is 5\""
+    "This says \"for key apple the corresponding value is 5, the value belonging to pear is 2 and the value of orange is 4\"."
    ]
   },
   {
@@ -1600,9 +1600,9 @@
    },
    "source": [
     "Like sets, the keys of a dict must be immutable types. There are no restrictions for the values. Also like sets, the keys are always unique. The values, however, may contain duplicates.  \n",
-    "Values can be of any data type: numbers, strings, lists, other dicts...  \n",
+    "Values can be of any data type: numbers, strings, lists, other dicts, dedicated objects.  \n",
     "\n",
-    "Dicts cannot be sliced, but finding values is done using `dictionary[key]`.\n"
+    "Dicts cannot be sliced. Finding values is done using `dictionary[key]`."
    ]
   },
   {
@@ -1633,7 +1633,7 @@
     "\n",
     "print(zoo.get(\"leopard\"))\n",
     "\n",
-    "if (zoo.get('lion')):       # workst because get() returns None when key is absent, and None evaulates to False\n",
+    "if (zoo.get('lion')):       # works because get() returns None when key is absent, and None evaulates to False\n",
     "    print('we have lions!')\n",
     "\n",
     "# better solution \n",
@@ -1662,6 +1662,32 @@
     "Feel free to try some other methods. \n",
     "Remember, `help(dict)` gives you almost all the information you need.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default vales\n",
+    "\n",
+    "A use case often encountered with dicts is collecting elements by a key. Suppose for instance we have a file containing these lines:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = '''\n",
+    "jonagold, apple\n",
+    "elstar, apple\n",
+    "conference, pear\n",
+    "junami, apple\n",
+    "doyenne, pear\n",
+    "opal, plum\n",
+    "'''\n",
+    "\n"
    ]
   },
   {
