--- a/13_next_steps.ipynb
+++ b/13_next_steps.ipynb
@@ -9,7 +9,7 @@
     "In classical programming you mainly write `.py` source files. In data science the notebook is the predominant form.  \n",
     "This chapter deals with an essential library if you want to embark in data science: `pandas`, the core library in working with tabular data. \n",
     "\n",
-    "In the chapter {doc}`Reading and writing files <reading_writing_files>` you have seen this code snippet for reading data from a csv (for 'comma-separated values') file:"
+    "In the chapter {doc}`Reading and writing files <05_reading_writing_files>` you have seen this code snippet for reading data from a csv (for 'comma-separated values') file:"
    ]
   },
   {
@@ -1224,8 +1224,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
