--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -1668,26 +1668,216 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Default vales\n",
+    "#### Default vales\n",
     "\n",
-    "A use case often encountered with dicts is collecting elements by a key. Suppose for instance we have a file containing these lines:"
+    "A use case often encountered with dicts is collecting elements by a key. Suppose for instance we have a file containing these lines (file reading is discussed in a later chapter):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jonagold, apple',\n",
+       " 'elstar, apple',\n",
+       " 'conference, pear',\n",
+       " 'junami, apple',\n",
+       " 'doyenne, pear',\n",
+       " 'opal, plum']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fruits = '''\n",
-    "jonagold, apple\n",
+    "fruits = '''jonagold, apple\n",
     "elstar, apple\n",
     "conference, pear\n",
     "junami, apple\n",
     "doyenne, pear\n",
-    "opal, plum\n",
-    "'''\n",
-    "\n"
+    "opal, plum'''\n",
+    "\n",
+    "fruits = fruits.split('\\n')\n",
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, if we want to collect the different varieties of the fruit species in a dict, we could do something like this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': ['jonagold', 'elstar', 'junami'],\n",
+       " 'pear': ['conference', 'doyenne'],\n",
+       " 'plum': ['opal']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit_summary = dict()\n",
+    "for line in fruits:\n",
+    "    variety, species = line.split(', ')\n",
+    "    if species in fruit_summary:\n",
+    "        fruit_summary[species].append(variety)\n",
+    "    else:\n",
+    "        fruit_summary[species] = list()\n",
+    "        fruit_summary[species].append(variety)\n",
+    "fruit_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although correct, this is not very efficient. For each line, there are 2 or three key lookups: `fruit_summary[species]`; the keyword `in` also performs a lookup.  \n",
+    "Enter default values!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': ['jonagold', 'elstar', 'junami'],\n",
+       " 'pear': ['conference', 'doyenne'],\n",
+       " 'plum': ['opal']}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit_summary = dict()\n",
+    "for line in fruits:\n",
+    "    variety, species = line.split(', ')\n",
+    "    fruit_summary.setdefault(species, []).append(variety)\n",
+    "fruit_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that if you are only interested in counts, using only the base library you would do this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': 3, 'pear': 2, 'plum': 1}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit_summary = dict()\n",
+    "for line in fruits:\n",
+    "    variety, species = line.split(', ')\n",
+    "    fruit_summary.setdefault(species, 0)\n",
+    "    fruit_summary[species] += 1\n",
+    "fruit_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, we have two lookups. Two more advanced dict implementations can be of help here. The first is `defaultdict`. It needs a so-called factory method that will provide a value for a key that is not present yet:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int, {'apple': 3, 'pear': 2, 'plum': 1})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "fruit_summary = defaultdict(int) # int factory\n",
+    "for line in fruits:\n",
+    "    variety, species = line.split(', ')\n",
+    "    fruit_summary[species] += 1\n",
+    "fruit_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But since counting is done so often, there is even a more specialized type for this: `Counter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'apple': 3, 'pear': 2, 'plum': 1})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "fruit_summary = Counter()\n",
+    "for line in fruits:\n",
+    "    variety, species = line.split(', ')\n",
+    "    fruit_summary.update([species])\n",
+    "fruit_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the fruit has to be wrapped in a list, otherwise the string is processed as an iterable of individual letters."
    ]
   },
   {
