--- a/13_next_steps.ipynb
+++ b/13_next_steps.ipynb
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selecting (and setting) data\n",
+    "## Selecting (and setting) data\n",
     "\n",
     "DataFrame provides several ways to access (get or set) positions, columns, rows or  partial DataFrames. These are \n",
     "\n",
@@ -1171,8 +1171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "### Summary statistics\n",
+    "## Summary statistics\n",
     "Summary statistics is where you usually begin. There are many functions available\n"
    ]
   },
