ITANN course description updated

--- a/ITANN_course_description.ipynb
+++ b/ITANN_course_description.ipynb
@@ -96,8 +96,6 @@
     "        * Practice: Comment 12.5.2.\n",
     "    * File I/O\n",
     "        * Practice: 12.6.1.\n",
-    "    * Script schrijven\n",
-    "        * Practice: Put 12.6.1 in a script with file as CL input & error checking\n",
     "* Afternoon\n",
     "    * Standard library functions\n",
     "        * Practice: 12.7.1-3\n",
@@ -105,7 +103,7 @@
     "        * Practice: 12.7.4.\n",
     "    * Script design & error handling\n",
     "        * As a group: 12.5.1. (12.4.4)\n",
-    "    * Learn how to program (hangman, sudoku, zeeslagje tegen de computer)\n",
+    "    * Learn how to program (hangman, sudoku, \"zeeslagje\" tegen de computer)\n",
     "        * Choose bigger project from 12.12.1-4\n",
     "\n"
    ]
